# flir-mjpg

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/capture/: Handler.h  SpinnakerHandler.cpp  SpinnakerHandler.h  WebcamHandler.cpp  WebcamHandler.h  jpengenc_udpsink.cpp  main.cpp  myappsrc.cpp
src/stream/: MJPEGStreamer.cpp  MJPEGStreamer.h  MJPEGWriter.cpp  MJPEGWriter.h  auto.h
